# mcp-traits-matcher

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.html
src/: daos.py  models.py  traits_matcher_server.py
tests/: conftest.py  test_dao.py  test_integration.py  test_models.py  test_resources.py  test_tools.py
